vendor/proc-macro-error-1.0.4/tests/ui/result_ext.rs
extern crate test_crate;
use test_crate::*;

result_unwrap_or_abort!(one, two);
result_expect_or_abort!(one, two);

fn main() {}
